3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/monster.c: fixed wiz's hidden mode not working on monsters.
Ryo 2004-03-28

common/porting.c
include/libproto.h
include/win32.h: added 'const' specifier to str-related functions.
Ryo 2004-03-26

common/exp.c
common/living.c
common/loader.[cl]
common/porting.c
server/c_misc.c
server/c_wiz.c
server/hiscore.c
server/resurrection.c: fixed %lld to %I64d for Windows.
Ryo 2004-03-26

server/attack.c: Add scare_creature() function, which sets FLAG_SCARED
   and also sets up appropriate enemy.  Clean up some formatting in
   other functions, and fix friendly fire - move it out of the loop for
   all attacktypes (can be after we have figured out max damage).  Also,
   has a bug where if an attach wasn't doing any damage, friendly fire could
   actually make it do damage (eg, fear spell).
server/player.c: Fix up flee_player() to be map tile aware.  Also, add
   call to flee_player() in handle_newcs_player() so player will run away.
MSW 2004-03-24

server/attack.c: Add missing skill=NULL in kill_object() - can be rare
   cases where the proper skill can't be found.
server/move.c: Fix push_object() so that it also updates the pushers/
   pushees map - should only happen in tiled map cases.
server/pets.c: Fix summon_object() so that if a summon cult monsters was
   cast, we try to find the god from the owner.  If still can't find the
   god, just return instead of crashing.
server/rune.c: Change trap_disarm() to call destroy_object() on the
   trap object, so that all the trapss inventory is also destroyed
   and not dumped on the ground.
server/skills.c: Only players without arms to steal.